--- a/lk/src/app/main/main.component.html
+++ b/lk/src/app/main/main.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="main-menu">
             <mat-nav-list>
-                <mat-list-item style="text-align: center" (click)="goto('/dialogs/27')">
+                <mat-list-item style="text-align: center" (click)="goto('dialogs')">
                     <button mat-icon-button class="list-button">
                         <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Диалоги</span>
@@ -23,7 +23,7 @@
                         <mat-icon class="res-menu-active-icon" svgIcon="res-menu-active"></mat-icon>
                     </div>
                 </mat-list-item>
-                <mat-list-item style="text-align: center" (click)="goto('/operators')">
+                <mat-list-item style="text-align: center" (click)="goto('operators')">
                     <button mat-icon-button class="list-button">
                         <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Операторы</span>
