Вывод списка операторов

--- a/lk/src/app/login/login.component.html
+++ b/lk/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
     <form class="login-form" [formGroup]="checkoutForm" (ngSubmit)="logIn(checkoutForm.value)">
-        <mat-form-field class="input login">
+        <mat-form-field class="input operator-number">
             <mat-label>Логин</mat-label>
             <input matInput placeholder="Введите логин" formControlName="login"/>
         </mat-form-field>
