--- a/lk/src/app/questions/questions-page/questions-page.component.sass
+++ b/lk/src/app/questions/questions-page/questions-page.component.sass
@@ -35,10 +35,10 @@
 .question-info-container
   display: flex
 
-.question-number
+.operator-number
   width: 10%
 
-.question-info
+.fio
   width: 60%
 
 .questions-title
