--- a/lk/src/app/security/operators/operators.component.sass
+++ b/lk/src/app/security/operators/operators.component.sass
@@ -2,7 +2,7 @@
   display: flex
   justify-content: space-between
   width: 100%
-  height: 5em
+  height: 4.6em
 
 .add-operator-btn
   width: 247px
@@ -13,6 +13,7 @@
   right: 1em
   top: 0.5em
   position: relative
+  color: white
 
 .add-question-btn
   width: 247px
@@ -39,11 +40,23 @@
 .question-info-container
   display: flex
 
-.question-number
+.operator-number
+  width: 5%
+
+.fio
+  width: 15%
+
+.operator-status
   width: 10%
 
-.question-info
-  width: 60%
+.block
+  color: #E52D2E
+
+.active
+  color: #519E36
+
+.operator-date
+  width: 12%
 
 .questions-title
   display: flex
