--- a/lk/src/app/main/main.component.html
+++ b/lk/src/app/main/main.component.html
@@ -33,6 +33,14 @@
                     </div>
                 </mat-list-item>
             </mat-nav-list>
+            <div class="side-bottom-container">
+                <div class="side-bottom-actions">
+                    <button mat-button class="list-button" (click)="logout()">
+                        <mat-icon svgIcon="res-exit"></mat-icon>&nbsp;&nbsp;
+                        <span class="side-nav-menu-caption">Выход</span>
+                    </button>
+                </div>
+            </div>
         </div>
     </mat-sidenav>
     <mat-sidenav-content>
