--- a/lk/src/app/main/main.component.sass
+++ b/lk/src/app/main/main.component.sass
@@ -41,3 +41,8 @@
 .res-menu-active-icon
   width: 14px
   height: 14px
+
+.side-bottom-container
+  position: absolute
+  bottom: 10px
+  left: 50px
