--- a/lk/src/app/security/operators/operators.component.html
+++ b/lk/src/app/security/operators/operators.component.html
@@ -23,7 +23,7 @@
     </div>
 </nav>
 
-<div class="questions-list">
+<div class="operator-list">
     <div class="questions-title">
         <div class="operator-number">Номер</div>
         <div class="fio">ФИО</div>
