--- a/lk/src/app/security/operators/operators.component.sass
+++ b/lk/src/app/security/operators/operators.component.sass
@@ -15,18 +15,7 @@
   position: relative
   color: white
 
-.add-question-btn
-  width: 247px
-  height: 50px
-  background: linear-gradient(180deg, #4A76DB 0%, #4670C7 100%)
-  border-radius: 3px
-  bottom: 1em
-  right: 1em
-  top: 0.5em
-  position: relative
-  color: #FFFFFF
-
-.questions-list
+.operator-list
   padding: 2em
   width: 100%
 
