CBF-10 Новые размеры виджета

--- a/front/ChatBot/src/app/chat-bot-button/chat-bot-button.component.sass
+++ b/front/ChatBot/src/app/chat-bot-button/chat-bot-button.component.sass
@@ -8,7 +8,7 @@
   min-width: $chat-bot-button-width
   max-height: $chat-bot-button-height
   min-height: $chat-bot-button-height
-  border-radius: ($chat-bot-button-height * 1.45) / 3.14
+  border-radius: ($chat-bot-button-height * 1.45) / $pi
   cursor: pointer
   background-color: #E52D2E
   box-shadow: 0 0 10px #E52D2E
