--- a/front/ChatBot/src/app/msg-container/msg-container.component.sass
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.sass
@@ -1,10 +1,12 @@
+@import ../../common/styles/variables
+
 .parent-chatbot
-  min-width: 490px
-  max-width: 490px
-  min-height: 500px
-  max-height: 500px
+  min-width: $parentChatBotWidth
+  max-width: $parentChatBotWidth
+  min-height: $parentChatBotHeight
+  max-height: $parentChatBotHeight
   position: fixed
-  bottom: -510px
+  bottom: -10px - $parentChatBotHeight
   right: 10px
   background: #F7F8FA
   border: 1px solid #D3D6DE
