--- a/front/ChatBot/src/common/styles/variables.sass
+++ b/front/ChatBot/src/common/styles/variables.sass
@@ -1,2 +1,12 @@
 $chat-bot-button-height: 45px
 $chat-bot-button-width: 130px
+
+$pi: 3.14
+
+$parentChatBotHeight: 630px
+$parentChatBotWidth: 560px
+
+$baseHeader: 71px
+$chatEditorMinHeight: 50px
+$chatEditorMaxHeight: 100px
+$msgContentMaxHeight: $parentChatBotHeight - $baseHeader - $chatEditorMinHeight
