--- a/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
+++ b/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
@@ -1,7 +1,9 @@
+@import ../../common/styles/variables
+
 .base-chat-header
   position: relative
   width: 100%
-  height: 71px
+  height: $baseHeader
   background-color: #3757A1
   border-radius: 1px
 
