--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -1,11 +1,21 @@
-.msg-content
+@import ../../common/styles/variables
+
+.msg-content-outer
   width: 100%
   height: 100%
-  max-height: 379px
+  max-height: $msgContentMaxHeight - 8px
+
+.msg-content
+  width: 94%
+  height: 95%
   overflow-y: auto
   scroll-behavior: smooth
   background-color: #F7F8FA
-
+  padding:
+    top: 2.5%
+    bottom: 2.5%
+    left: 3%
+    right: 3%
 .msg-content::-webkit-scrollbar
   width: 6px
 
@@ -18,7 +28,7 @@
 
 .curtain
   position: absolute
-  min-height: 428px
+  min-height: $msgContentMaxHeight
   width: 100%
   background-color: #F7F8FA
   z-index: -1
