--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.html
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.html
@@ -17,9 +17,12 @@
     <div class="search-icon" (click)="searchQuestionClick()">
       <img src="assets/search.svg"/>
     </div>
-    <div class="search-autocomplete" *ngIf="isSearchQueryInput"></div>
+<!--    <div class="search-autocomplete" *ngIf="isSearchQueryInput"></div>-->
   </div>
-  <div class="main-questions-block elements">
+  <div class="main-questions-block elements" *ngIf="!isSearchQueryInput">
     <first-questions *ngFor="let question of questions | async" [question]="question" (select)="selectQuestion($event)"></first-questions>
+  </div>
+  <div class="main-questions-block" *ngIf="isSearchQueryInput" style="padding-top: 0">
+    <search-questions [searchQuery]="data.searchQuery"></search-questions>
   </div>
 </div>
