--- a/front/ChatBot/src/app/dialog/chat-dialog.component.html
+++ b/front/ChatBot/src/app/dialog/chat-dialog.component.html
@@ -3,5 +3,6 @@
   <div *ngFor="let msg of messages; index as pId" [ngSwitch]="msg.owner">
     <client-message [message]="msg" *ngSwitchCase="0"></client-message>
     <operator-message [message]="msg" *ngSwitchCase="1"></operator-message>
+    <operator-message [message]="msg" *ngSwitchCase="2"></operator-message>
   </div>
 </msg-content>
