--- a/front/ChatBot/src/app/auth-form/auth-form.component.sass
+++ b/front/ChatBot/src/app/auth-form/auth-form.component.sass
@@ -21,7 +21,7 @@
   padding-left: 1em
 
 .form-input.fio
-  margin-top: 3em
+  margin-top: 0
 
 .form-input.editable-placeholder[contentEditable="true"]:empty:before
   content: attr(placeholder)
@@ -43,3 +43,6 @@
   align-items: center
   display: flex
   cursor: pointer
+
+.form-input.msg
+  height: 130px
