--- a/front/ChatBot/src/app/chat-header/chat-header.component.sass
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.sass
@@ -34,15 +34,12 @@
     left: 1em
     top: 1.6em
 
-.close-icon
+.question-icon
   width: 20px
   margin-right: 0.1em
 
-.close-icon:hover
+.question-icon:hover
   width: 22px
-
-.cross
-  left: -40px
 
 .question
   left: -70px
