--- a/front/ChatBot/src/app/dialog/chat-dialog.component.html
+++ b/front/ChatBot/src/app/dialog/chat-dialog.component.html
@@ -1,4 +1,4 @@
-<chat-header (closed)="onCloseChat()" (openQuestions)="onOpenQuestions()"></chat-header>
+<chat-header (openQuestions)="onOpenQuestions()"></chat-header>
 <msg-content>
   <div *ngFor="let msg of messages; index as pId" [ngSwitch]="msg.owner">
     <client-message [message]="msg" *ngSwitchCase="0"></client-message>
