Стили, исправление после тестирования
Доработка функционала

--- a/front/ChatBot/src/app/chat-header/chat-header.component.html
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.html
@@ -1,6 +1,7 @@
 <base-chat-header>
-  <div class="company">АО РЭС</div>
-  <div class="operators">
+  <div>
+    <div class="company">АО РЭС</div>
+    <div class="operators">
     <span class="header-element question" (click)="onOpenQuestions($event)">
       <img
         src="assets/questions.svg"
@@ -8,5 +9,6 @@
         alt="Вопросы"
       />
     </span>
+    </div>
   </div>
 </base-chat-header>
