--- a/front/ChatBot/src/app/questions/questions-header/questions-header.component.sass
+++ b/front/ChatBot/src/app/questions/questions-header/questions-header.component.sass
@@ -4,6 +4,12 @@
   display: flex
   justify-content: space-between
 
-.close-container
-  text-align: right
+.header-element
+  color: white
+  padding:
+    left: 2em
+    top: 1.6em
 
+.header-message
+  text-transform: uppercase
+  @include common.font-roboto(16px, 19px, bold)
