--- a/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
+++ b/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
@@ -7,6 +7,8 @@
   height: $baseHeader
   background-color: #3757A1
   border-radius: 1px
+  display: flex
+  justify-content: space-between
 
 .header-element
   color: white
