--- a/front/ChatBot/src/app/questions/questions-header/questions-header.component.html
+++ b/front/ChatBot/src/app/questions/questions-header/questions-header.component.html
@@ -1,5 +1,5 @@
 <base-chat-header>
   <div class="header-container">
-    <div *ngIf="!responsePreset" class="header-element header-message">Вероятный ответ на ваш вопрос</div>
+    <div *ngIf="responsePreset" class="header-element header-message">Вероятный ответ на ваш вопрос</div>
   </div>
 </base-chat-header>
