--- a/front/ChatBot/src/app/questions/questions/questions.component.html
+++ b/front/ChatBot/src/app/questions/questions/questions.component.html
@@ -1,4 +1,4 @@
-<questions-header [responsePreset]="!isShowQuestions"></questions-header>
+<questions-header></questions-header>
 <div>
   <div class="main-container questions-container" *ngIf="isShowQuestions">
     <div *ngFor="let question of questions" class="question-container">
