--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
@@ -8,6 +8,7 @@
   @include common.font-roboto(20px, 140%, 500)
   color: #333740
 
+
 .main-questions-block.search
   display: flex
   position: relative
@@ -31,3 +32,4 @@
 
 .main-questions-block.elements
   display: flex
+  flex-wrap: wrap
