--- a/front/ChatBot/src/app/chat-editor/chat-editor.component.html
+++ b/front/ChatBot/src/app/chat-editor/chat-editor.component.html
@@ -1,4 +1,4 @@
-<div #chatEditor class="chat-editor">
+<div #chatEditor class="chat-editor" *ngIf="canShow | async">
 <!--  <div class="whenEmpty" *ngIf="this.message === ''" >Введите сообщение</div>-->
   <div
     #editor
