--- a/front/ChatBot/src/app/questions/first-questions/first-questions.component.sass
+++ b/front/ChatBot/src/app/questions/first-questions/first-questions.component.sass
@@ -11,6 +11,7 @@
   margin:
     left: 0.3em
     right: 0.3em
+    bottom: 0.6em
 
 .first-questions-element:hover
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1)
