--- a/front/ChatBot/src/app/chat-editor/chat-editor.component.html
+++ b/front/ChatBot/src/app/chat-editor/chat-editor.component.html
@@ -8,7 +8,7 @@
     (input)="onChange($event.target)"
     (keyup.enter)="onKeyupEnter($event)"
     (keydown.enter)="onKeydownEnter($event)"
-    placeholder="Введите сообщение"
+    placeholder="Свет в вашем доме - это мы!"
     [ngClass]="{'placeholder-active': message === ''}"
   >
   </div>
