--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.html
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.html
@@ -3,7 +3,7 @@
 
 <div>
   <div class="main-questions-block">
-    Здравствуйте. Я чат бот АО РЭС, могу ответить на популярные вопросы.
+    {{salam1 | async}}
   </div>
   <div class="main-questions-block search">
     <div
