--- a/front/ChatBot/src/app/questions/questions-header/questions-header.component.html
+++ b/front/ChatBot/src/app/questions/questions-header/questions-header.component.html
@@ -1,5 +1,5 @@
 <base-chat-header>
   <div class="header-container">
-    <div class="header-element header-message">ЧАТ БОТ АО РЭС</div>
+    <div class="header-element header-message">{{caption | async}}</div>
   </div>
 </base-chat-header>
