--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
@@ -33,3 +33,10 @@
 .main-questions-block.elements
   display: flex
   flex-wrap: wrap
+
+.editableDiv2[contentEditable="true"]:empty:before
+  content: attr(placeholder)
+  cursor: text
+
+.placeholder-active
+  color: gray
