--- a/lk/src/app/dialogs/dialogs.component.html
+++ b/lk/src/app/dialogs/dialogs.component.html
@@ -24,7 +24,8 @@
             <div class="dialog-status {{dialog.dialogStatus | dialogStatus:'color'}}">{{dialog.dialogStatus | dialogStatus}}</div>
             <div class="dialog-date-created">{{dialog.dateCreated | date }}</div>
             <div class="dialog-date-closed">{{dialog.dateCompleted | date}}</div>
-            <div class="dialog-client">{{dialog.client | userFio}} <br> {{dialog.client.email}}, {{dialog.client.phone}}</div>
+            <div class="dialog-operator">{{dialog.operator ? dialog.operator.fio : 'Открыт'}}</div>
+            <div class="dialog-client">{{dialog.client.fio}} <br> {{dialog.client.email}}, {{dialog.client.phone}}</div>
             <div class="dialog-actions">
                 <div class="dialog-open">
                     <button mat-button (click)="openChat(dialog)">
