--- a/lk/src/app/security/operators/operators.component.html
+++ b/lk/src/app/security/operators/operators.component.html
@@ -39,10 +39,7 @@
                 </div>
                 <div class="fio">
                     <div class="question-question">
-                        {{operator.lastName}}
-                    </div>
-                    <div class="question-response">
-                        {{operator.firstName}} {{operator.middleName}}
+                        {{operator.fio}}
                     </div>
                 </div>
                 <div class="operator-status" [ngClass]="operator.isActive ? 'active' : 'block'">
