--- a/lk/src/app/dialogs/dialogs.component.html
+++ b/lk/src/app/dialogs/dialogs.component.html
@@ -14,14 +14,25 @@
     <a mat-tab-link [routerLink]="['/dialogs/', linkType[linkType.closed]]" routerLinkActive #rla="routerLinkActive"
        [routerLinkActiveOptions]="{ exact: true }" [active]="activeLink == linkType.closed"
        (click)="activeLink = linkType.closed">Закрытые</a>
+    <a mat-tab-link [routerLink]="['/dialogs/', linkType[linkType.offline]]" routerLinkActive #rla="routerLinkActive"
+       [routerLinkActiveOptions]="{ exact: true }" [active]="activeLink == linkType.offline"
+       (click)="activeLink = linkType.offline">Офлайн</a>
 </nav>
-
+<div class="dialog-captions">
+    <div class="dialog-number">№ Диалога</div>
+    <div class="dialog-status">Статус</div>
+    <div class="dialog-date-created">Дата открытия</div>
+    <div class="dialog-date-closed">Дата закрытия</div>
+    <div class="dialog-operator">Оператор</div>
+    <div class="dialog-client">Клиент</div>
+    <div class="dialog-actions"></div>
+</div>
 <mat-card *ngFor="let dialog of dialogs | async; index as i" tabindex="i" class="card">
-    <mat-card-subtitle>{{dialog.firstMessage}}</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="dialog.firstMessage">Сообщение: <span class="dialog-first-message">{{dialog.firstMessage}}</span></mat-card-subtitle>
     <mat-card-content>
         <div class="dialog-info-container">
             <div class="dialog-number">№{{dialog.number}}</div>
-            <div class="dialog-status {{dialog.dialogStatus | dialogStatus:'color'}}">{{dialog.dialogStatus | dialogStatus}}</div>
+            <div class="dialog-status {{dialog | dialogStatus:'color'}}">{{dialog | dialogStatus}}</div>
             <div class="dialog-date-created">{{dialog.dateCreated | date }}</div>
             <div class="dialog-date-closed">{{dialog.dateCompleted | date}}</div>
             <div class="dialog-operator">{{dialog.operator ? dialog.operator.fio : 'Открыт'}}</div>
