--- a/front/ChatBot/src/app/client-message/client-message.component.sass
+++ b/front/ChatBot/src/app/client-message/client-message.component.sass
@@ -27,3 +27,14 @@
 
 .svg
   display: inline
+
+.close-session
+  background-color: #3757A1
+  height: 50px
+  border-radius: 50px
+  color: #FFFFFF
+  @include common.font-roboto(11px, 13px, 500)
+  display: flex
+  justify-content: center
+  align-items: center
+
